# yuripelago-bot

./: .env.template  .envrc  .gitignore  Cargo.toml  README.md  TODO.md  archibot.yaml  bot copy.py  bot.py  bot_vars.py  bridgeipelago.py  bridgeipleago.yaml  codebook.toml  flake.nix  justfile  main.py  pyproject.toml  requirements.txt  tracker_client.py  utils.py
.zed/: settings.json
Arch/: CommonClient.py  LinksAwakeningClient.py
Arch/worlds/alttp/: StateHelpers.py
Arch/worlds/dlcquest/test/: TestOptionsLong.py  __init__.py
Arch/worlds/ladx/: GpsTracker.py  ItemTracker.py  Items.py  Locations.py  Options.py  Tracker.py  __init__.py
Arch/worlds/ladx/LADXR/: assembler.py  generator.py  hints.py  itempool.py  rom.py
Arch/worlds/ladx/test/: TestDungeonLogic.py  __init__.py
Arch/worlds/minecraft/: Constants.py  ItemPool.py  Structures.py
Arch/worlds/minecraft/data/: excluded_locations.json  items.json  locations.json  regions.json
Arch/worlds/noita/: events.py  regions.py  rules.py
Arch/worlds/sc2/docs/: contributors.md
Arch/worlds/stardew_valley/: early_items.py  option_groups.py
Arch/worlds/stardew_valley/bundles/: bundle.py  bundle_item.py  bundle_room.py  bundles.py
Arch/worlds/stardew_valley/data/: bundle_data.py  craftable_data.py  items.csv  locations.csv  recipe_data.py  recipe_source.py  villagers_data.py
Arch/worlds/stardew_valley/docs/: setup_en.md
Arch/worlds/stardew_valley/logic/: ability_logic.py  action_logic.py  arcade_logic.py  artisan_logic.py  buff_logic.py  building_logic.py  combat_logic.py  cooking_logic.py  crafting_logic.py  crop_logic.py  fishing_logic.py  gift_logic.py  has_logic.py  mine_logic.py  money_logic.py  monster_logic.py  museum_logic.py  pet_logic.py  received_logic.py  region_logic.py  relationship_logic.py  season_logic.py  shipping_logic.py  skill_logic.py  special_order_logic.py  time_logic.py  tool_logic.py  traveling_merchant_logic.py  wallet_logic.py
Arch/worlds/stardew_valley/strings/: animal_names.py  animal_product_names.py  artisan_good_names.py  building_names.py  bundle_names.py  craftable_names.py  crop_names.py  (+16 more)
Arch/worlds/witness/: options.py
Arch/worlds/yoshisisland/: Client.py  Items.py  Options.py  Rom.py  Rules.py  setup_game.py
ItemQueue/: B-rad_Undertale.csv  P2Ready.csv  Quasky copy.csv  Quasky.csv  Quasky_Test.csv
Refrence-Data/: TextClient_2024_04_03_02_33_02.txt
RegistrationData/: quasky.csv
archi_bot/: db.py  events.py  tracker_client.py  types.py  utils.py  vars.py
archi_bot/components/: catchup.py  checks.py  debug.py  events.py  hints.py  info.py  management.py  register.py  tasks.py
archi_bot/models/: misc.py  packets.py  server.py
archi_bot/utils/: __init__.py  archi_games.py  autocomplete.py  slots.py  writers.py
components/: catchup.py  checks.py  debug.py  events.py  hints.py  info.py  register.py  tasks.py
docs/: setup.md
entity/: Cargo.toml
entity/src/: archi_player.rs  archi_room.rs  archi_slot.rs  discord_slot_link.rs  discord_user.rs  game_data_package.rs  hint.rs  item.rs  item_group.rs  lib.rs  location.rs  location_group.rs  prelude.rs  rando_game.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250418_210821_init_archi_base.rs  m20250419_170728_init_archi_games.rs  m20250419_172333_init_rando_game.rs  m20250419_174401_init_archi_items.rs  m20250419_175546_init_archi_locations.rs  m20250419_175755_init_archi_hints.rs  m20250419_180743_init_discord.rs
src/: archipelago.rs  discord.rs  main.rs
src/discord/: commands.rs
src/discord/commands/: help.rs
tools/: Addchecks.py  check.sh  test.py  test2.py
tools/ArchArchive/: CommonClient.py
tools/Refrence-Data/: TestData_ArchClientData copy.Demo  TestData_ArchClientData.Demo  TestData_ItemQueue.csv
(+51 files in other folders)
