[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
archipelago_rs = { git = "https://github.com/ryanisaacg/archipelago_rs", version = "0.1.0" }
sea-orm = { version = "1.1.10", features = ["sqlx-sqlite", "runtime-tokio-rustls", "with-json"] }
